# cdf_cpp

./: .gitignore  CMakeLists.txt  ICRA_exps_walls.sh  README.md  coverage-search.pro  experiment.sh  format.sh
include/covsearch/: angles.hpp  constants.hpp  helpers.hpp  movingai.hpp  planner.hpp  robot_space.hpp  types.hpp  wastar.hpp  xyenv.hpp  xytheta.hpp
include/qt/: dialog.h  map_item.hpp  robot_item.hpp
mprim/: ICRA.mprim  ICRA_2.mprim  final.mprim  frontier_macro_only.mprim  genmprim_unicycle_2.m  genmprim_unicycle_3.m  genmprim_unicycle_ICRA.m  unicycle_lengths_res_1m.mprim
scripts/: plot_results.py
scripts/lambda_analysis/: lambda_analysis.py
scripts/map_gen/: corridors_and_rooms.py  movingai_map_process.py  walls_and_gaps.py
scripts/misc/: sample_patterns_analysis.py  vels_analysis.py
scripts/parse_logs/: coverage_log_to_image.py  imgs_to_movie_python.py  parse_coverage_logs.py  parse_timing_logs.py  submission_video_images.py
src/: constants.cpp  dialog.cpp  dialog.ui  map_item.cpp  movingai.cpp  planner.cpp  robot_item.cpp  robot_space.cpp  types.cpp  wastar.cpp  xyenv.cpp  xytheta.cpp
tests/: dubins_macro_generator.cpp  gen_pattern_no_sampling.cpp  persistent.cpp  persistent_nosim.cpp  smpl_dubins_test.cpp  visualize_macro_actions.cpp
